# bitmap-cpp

./: CMakeLists.txt
bitmap-cpp/: bitmap.cpp  bitmap.h  bitmap_transformer.cpp  bmp_transform.cpp
cmake/: BitmapCppConfig.cmake.in
cmake/Util/: HalideGenerator.cmake
test/: Makefile  test  test.cpp
